Style: Add design on index
- To enhance UX and visual appeal

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body{
-  background-color: lightgrey;
+* {
+  font-family: Arial, Sans-serif, serif;
+}
+body {
+  background-color: lightyellow;
+}
+
+h1{
+  color: lightcoral;
 }
